--- a/Space Travel Landing Page/css/style.css
+++ b/Space Travel Landing Page/css/style.css
@@ -1,3 +1,58 @@
 * {
     font-family: 'Montserrat', sans-serif;
 }
+
+/* Services Section */
+
+#servicesOffered {
+    margin-top:30px
+}
+
+.servicesColumn {
+    padding:20px;
+    text-align: center;
+}
+
+.servicesContent {
+    margin-top: 30px;
+}
+
+/* Gallery Section */
+#gallery {
+    margin-top: 40px;
+}
+
+.galleryColumn {
+    text-align: center;
+}
+
+/* Button Section */
+button {
+    margin-top: 60px;
+}
+
+/* Footer Style */
+footer {
+    padding: 20px;
+    margin-top: 50px;
+    background-color: black;
+    color: #fff;
+}
+
+.footer_links {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer_links:hover {
+    text-decoration: underline;
+    color: #fff;
+}
+
+ul {
+    list-style: none;
+}
+
+hr {
+    align-self: center;
+}
