Tried to add move to top button

--- a/Space Travel Landing Page/css/style.css
+++ b/Space Travel Landing Page/css/style.css
@@ -113,7 +113,61 @@ ul {
 hr {
     align-self: center;
 }
+/* .fa, .fas {
+  font-weight: 900;
+}
 
+
+.fa, .far, .fas {
+  font-family: "Font Awesome 5 Free";
+}
+
+.fa, .fab, .fad, .fal, .far, .fas {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
+
+ element.style {
+  display: block;
+} 
+#topbtn {
+  display: none; 
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  font-size: 2rem;
+  padding: 2px 8px;
+    padding-top: 2px;
+    padding-right: 8px;
+    padding-bottom: 2px;
+    padding-left: 8px;
+    border-radius: 50%;
+    border: 1px solid black;
+    border-top-color: black;
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-color: black;
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-bottom-color: black;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: black;
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+  background: transparent;
+  transition: all 0.3s;
+} */
 /*Media Queries*/
 @media (max-width: 768px) {
     article#main-col,
