Was trying to get our navbar fixed

--- a/Space Travel Landing Page/css/style.css
+++ b/Space Travel Landing Page/css/style.css
@@ -2,6 +2,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+/* Navbar
+.positionNav {
+  position:fixed;
+} */
+
 /* About Me */
 .profile-pic {
     border-radius: 50%;
