--- a/Space Travel Landing Page/Music_Player_Using_LinkedList/css/style.css
+++ b/Space Travel Landing Page/Music_Player_Using_LinkedList/css/style.css
@@ -29,7 +29,7 @@
 .outer-wrapper {
   width: 100%;
   height: 100vh;
-  background-color: #243441;
+  background-color: #243d52;
   flex-wrap: wrap;
 }
 
@@ -37,7 +37,7 @@
   margin: 10px;
   height: 400px;
   width: 400px;
-  border: 3px solid #21282c;
+  border: 3px solid #457794;
   box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   flex-direction: column;
